--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,5 +6,6 @@
   "linked": [],
   "access": "public",
   "updateInternalDependencies": "patch",
-  "ignore": ["@acme/docs"]
+  "ignore": ["@soul/docs"],
+  "baseBranch": "main"
 }
