build(docs): deploy docs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,27 +13,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Setup Node.js 16.x
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: 16.x
 
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 7
-          run_install: false
-
       - name: Install Dependencies
-        run: pnpm install
+        run: yarn
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
         with:
           # This expects you to have a script called release which does a build for your packages and calls changeset publish
-          publish: pnpm release
+          publish: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -41,4 +36,4 @@ jobs:
       - name: Send a Slack notification if a publish happens
         if: steps.changesets.outputs.published == 'true'
         # You can do something when a publish happens.
-        run: my-slack-bot send-notification --message "A new version of cushily-design was published!"
+        run: my-slack-bot send-notification --message "A new version of ${GITHUB_REPOSITORY} was published!"
