--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,9 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: npm i pnpm 
       - run: pnpm run build
       # 文档编译命令，如果是 react 模板需要修改为 npm run docs:build
-      - run: npm run deploy:docs
+      - run: pnpm run deploy:docs
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
