--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,18 +4,37 @@ on:
   push:
     branches:
       - main # default branch
-
+  pull_request:
+    branches:
+        - main # default branch
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: pnpm run build
+        - name: Checkout Repo
+          uses: actions/checkout@v3
+
+        - name: Setup Node.js 16.x
+          uses: actions/setup-node@v3
+          with:
+           node-version: 16.x
+
+        - uses: pnpm/action-setup@v2
+          with:
+           version: 8
+           run_install: false
+
+        - name: Install Dependencies
+          run: pnpm install
+        
+        - uses: actions/checkout@v3
+        - run: pnpm run build
+      
       # 文档编译命令，如果是 react 模板需要修改为 npm run docs:build
-      - run: pnpm run deploy:docs
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          # 文档目录，如果是 react 模板需要修改为 docs-dist
-          publish_dir: ./apps/docs/storybook-static
+        - run: pnpm run deploy:docs
+        - name: Deploy
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+           # 文档目录，如果是 react 模板需要修改为 docs-dist
+           publish_dir: ./apps/docs/storybook-static
