--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,7 +7,7 @@
     "build": "build-storybook --docs",
     "preview-storybook": "serve storybook-static",
     "clean": "rm -rf .turbo && rm -rf node_modules",
-    "deploy:docs": "gh-pages -d storybook-static"
+    "deploy": "gh-pages -d storybook-static"
   },
   "dependencies": {
     "@soul/core": "workspace:0.0.0",
