--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,14 +24,13 @@ jobs:
            version: 7
     
 
-        - name: Install Dependencies
-          run: pnpm install
-        
+    
         - uses: actions/checkout@v3
+        - run: pnpm install
         - run: pnpm run build
       
       # 文档编译命令，如果是 react 模板需要修改为 npm run docs:build
-        - run: pnpm run deploy:docs
+        - run: pnpm run deploy
         - name: Deploy
           uses: peaceiris/actions-gh-pages@v3
           with:
