--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Send a Slack notification if a publish happens
         if: steps.changesets.outputs.published == 'true'
         # You can do something when a publish happens.
-        run:  my-slack-bot send-notification --message "A new version of cushily-design was published!"
+        run:  my-slack-bot send-notification --message "A new version of ${GITHUB_REPOSITORY} was published!"
