--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,9 +29,9 @@ jobs:
         - run: pnpm install
         - run: pnpm run build
       
-        - name: Publish github pages
+        - name: Deploy with gh-pages
           run: |
-           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/vaynevayne/soul.git
+           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
            npx gh-pages -d build -u "github-actions-bot <support+actions@github.com>"
           env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
