--- a/packages/soul-utils/package.json
+++ b/packages/soul-utils/package.json
@@ -22,10 +22,13 @@
     "eslint": "^8.15.0",
     "eslint-config-soul": "workspace:*",
     "react": "^18.1.0",
-    "tsup": "^5.10.1",
     "typescript": "^4.5.3"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "tsup": {
+    "sourcemap": true,
+    "clean": true
   }
 }
