--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "turbo run build --filter=docs^... && changeset publish",
-    "deploy":"turbo run deploy --filter docs"
+    "deploy": "turbo run deploy --filter docs"
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
+    "@types/lodash-es": "^4.17.7",
     "eslint": "^8.29.0",
     "eslint-config-soul": "workspace:0.0.0",
     "gh-pages": "^5.0.0",
     "prettier": "^2.8.0",
+    "tsup": "^6.7.0",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@7.15.0"
+  "packageManager": "pnpm@8.5.1"
 }
