--- a/packages/soul-core/package.json
+++ b/packages/soul-core/package.json
@@ -19,13 +19,36 @@
     "@soul/tsconfig": "workspace:*",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "antd": "^5.5.0",
+    "array-move": "^4.0.0",
     "eslint": "^8.15.0",
     "eslint-config-soul": "workspace:*",
+    "exceljs": "^4.3.0",
+    "immer": "^10.0.2",
+    "lodash-es": "^4.17.21",
     "react": "^18.1.0",
-    "tsup": "^5.10.1",
+    "react-contexify": "^6.0.0",
+    "react-drag-listview": "^2.0.0",
+    "react-resizable": "^3.0.5",
     "typescript": "^4.5.3"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "peerDependencies": {
+    "antd": "^5.5.0",
+    "array-move": "^4.0.0",
+    "exceljs": "^4.3.0",
+    "immer": "^10.0.2",
+    "lodash-es": "^4.17.21",
+    "react-contexify": "^6.0.0",
+    "react-drag-listview": "^2.0.0",
+    "react-resizable": "^3.0.5"
+  },
+  "dependencies": {
+    "@soul/utils": "workspace:^"
+  },
+  "tsup": {
+    "sourcemap": true
   }
 }
