build(ts): it works

--- a/packages/soul-utils/package.json
+++ b/packages/soul-utils/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.4",
     "eslint": "^8.15.0",
     "eslint-config-soul": "workspace:*",
+    "exceljs": "^4.3.0",
     "react": "^18.1.0",
     "typescript": "^4.5.3"
   },
@@ -29,5 +30,8 @@
   },
   "tsup": {
     "sourcemap": true
+  },
+  "peerDependencies": {
+    "exceljs": "^4.3.0"
   }
 }
