--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@changesets/cli": "^2.25.2",
     "@types/lodash-es": "^4.17.7",
     "eslint": "^8.29.0",
-    "eslint-config-soul": "workspace:0.0.0",
+    "eslint-config-soul": "workspace:*",
     "gh-pages": "^5.0.0",
     "prettier": "^2.8.0",
     "tsup": "^6.7.0",
