--- a/packages/eslint-config-soul/package.json
+++ b/packages/eslint-config-soul/package.json
@@ -6,10 +6,13 @@
   "dependencies": {
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-config-turbo": "latest"
+    "eslint-config-turbo": "latest",
+    "eslint-plugin-react": "7.29.4"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
