--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,13 +10,13 @@
     "deploy": "pnpm build && touch ./storybook-static/.nojekyll && gh-pages -d ./storybook-static -t true"
   },
   "dependencies": {
-    "@soul/core": "workspace:0.0.2",
+    "@soul/core": "workspace:0.0.3",
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@soul/tsconfig": "workspace:0.0.2",
+    "@soul/tsconfig": "workspace:0.0.3",
     "@storybook/addon-essentials": "^7.0.12",
     "@storybook/addon-interactions": "^7.0.12",
     "@storybook/addon-links": "^7.0.12",
@@ -24,13 +24,17 @@
     "@storybook/react": "^7.0.12",
     "@storybook/react-vite": "^7.0.12",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/react": "^18.2.7",
     "@vitejs/plugin-react": "^1.3.2",
-    "eslint-config-soul": "workspace:0.0.2",
+    "eslint-config-soul": "workspace:0.0.3",
     "eslint-plugin-storybook": "^0.6.12",
     "prop-types": "^15.8.1",
     "serve": "^13.0.4",
     "storybook": "^7.0.12",
     "typescript": "^4.9.3",
     "vite": "^4.3.8"
+  },
+  "peerDependencies": {
+    "@types/react": "^18.2.7"
   }
 }
