--- a/packages/soul-core/package.json
+++ b/packages/soul-core/package.json
@@ -55,8 +55,12 @@
     "react-resizable": "^3.0.5"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
     "@soul/utils": "workspace:^",
-    "react-collapse": "^5.1.1"
+    "react-collapse": "^5.1.1",
+    "react-sortablejs": "^6.1.4"
   },
   "tsup": {
     "sourcemap": true
