--- a/packages/soul-core/package.json
+++ b/packages/soul-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@soul/core",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -25,7 +25,7 @@
     "@soul/tsconfig": "workspace:*",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "antd": "^5.5.1",
+    "antd": "^5.10.1",
     "array-move": "^4.0.0",
     "eslint": "^8.15.0",
     "eslint-config-soul": "workspace:*",
@@ -59,6 +59,7 @@
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
     "@soul/utils": "workspace:^",
+    "clipboard": "^2.0.11",
     "react-collapse": "^5.1.1",
     "react-sortablejs": "^6.1.4"
   },
